# Needleman-Wunsch-visualization

./: CMakeLists.txt  alignment.cpp  alignment.h  alignmentmodel.cpp  alignmentmodel.h  controller.cpp  controller.h  dp_table.cpp  dp_table.h  dp_view.cpp  dp_view.h  dp_visualiser.cpp  dp_visualiser.h  dp_visualiser.ui  main.cpp  scoringfunction.cpp  scoringfunction.h
